@startuml
'https://plantuml.com/class-diagram
hide circle
class DashboardRepository <<interface>>

title Class Diagram / As Product Manager or Financial director, I want to know the year-to-date revenue of my  company filtered/broken down by plan




class Dashboard{
    -totalActiveSubscriptions
    - totalCanceledSubscriptions
    -totalRevenue
    -planName
    -month
}
class DashboardViewMapper{
    +toDashboardView(Dashboard dashboard):DashboardView
}
class DashboardController{
    getDashboardRevenueTillNow(Strinh plan):DashboardView
    }
class DashboardService{
     getRevenueTillNow(String plan);
     getPaymentTypeAndPlanNameCounts(String startDate,String endDate);



}
class CreateDashboardMapper{
    +public abstract Dashboard createRevenueTillNow(Double revenue):Dashboard


}

interface PlanRepository{
+findByName_Name(String name): Optional<Plans>

}

interface DashboardRepository
{
+ findPaymentTypeAndPlanNameCounts(String startDate,String endDate);


}


DashboardController ..> DashboardService: uses >
DashboardService ..> DashboardRepository: uses >
DashboardService ..> PlanRepository: uses >

DashboardRepository ..> Dashboard: < record
DashboardService ..> CreateDashboardMapper: uses >
DashboardController ..>DashboardViewMapper: uses >
@enduml